tests/machine/x/c/string_contains.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/string_contains.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/string_contains.c:16:20: error: request for member ‘contains’ in something not a structure or union
   16 |   printf("%s\n", (s.contains("cat")) ? "true" : "false");
      |                    ^
/workspace/mochi/tests/machine/x/c/string_contains.c:17:20: error: request for member ‘contains’ in something not a structure or union
   17 |   printf("%s\n", (s.contains("dog")) ? "true" : "false");
      |                    ^

   1: #include <stdio.h>
